Fixed Figcaption and Navbar z-index

--- a/index.css
+++ b/index.css
@@ -42,6 +42,7 @@ html{
     display: flex;
     justify-content: flex-end;
     background-color: cadetblue;
+    z-index: 10;
 }
 
 .nav-list {
